[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-redactor"
version = "0.1.0"
description = "Redact secrets/PII from agent traces before sharing"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
trace-redactor = "trace_redactor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
